2009-03-12  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/loopback.c (xim_loopback_real_xim_forward_event):
	Fix an assertion on looking up a sequence.

	* backends/xim/loopback.c (xim_loopback_real_xim_forward_event):
	Ignore modifker keys.

	* backends/xim/loopback.c (xim_loopback_real_xim_forward_event): wait
	for a XIM_SYNC_REPLY if it's on going and postpone processing of
	a keyevent.
	(xim_loopback_real_xim_sync_reply): set a timer to restart processing
	of keyevents if there are.
	(_process_keyevent): new.

2009-03-11  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/compose.c (compose_parse): get rid of NoSymbol warning.
	maybe passed thourgh enough time to estimate. (rhbz#484142)

2009-03-10  Akira TAGOH  <tagoh@redhat.com>

	* applet/main.c (_preference_activated): Fix a warning on free.
	(_create_applet): likewise.

	* configure.ac: bump to 0.106.1.

	* src/monitor.c (imsettings_monitor_get_current_user_im): Fix appearing
	a critical message in g_ascii_strdown().
	(imsettings_monitor_get_current_system_im): likewise.

	* applet/main.c (_create_applet): set a default value.

	* backends/xim/compose.c (compose_parse): Fix a double-free issue. (RHBZ#485595)

2009-03-09  Akira TAGOH  <tagoh@redhat.com>

	Stop a debugging message. (RHBZ#489119)

	* utils/imsettings-start.c (main): Add -q option.

	* applet/main.c (_setup_acceleration_key): disable a debugging message.

	Workaround to not filtered out the key event with accelerator keys
	on some X apps. (RHBZ#488675)

	* applet/main.c (_gconf_sync_cb): new.
	(_preference_activated): reflect a value from gconf.

	* applet/imsettings-applet.schemas.in: Add a sync_on_forward key.

	* backends/xim/loopback.c (xim_loopback_real_set_property): new.
	(xim_loopback_real_get_property): new.
	(xim_loopback_real_xim_create_ic): change a event mask for
	XIM_SET_EVENT_MASK to allow a synchronous event of XIM_FORWARD_EVENT.

	* applet/main.c (_preference_sync_toggled): new.